2020-10-05 Wiley E. Hill <wileyhill@gmail.com>

    * src/geda/geda_pin.c: Add function documentation:

          * geda_pin_get_whichend
          * geda_pin_lookup_mtype

    * src/object/o_pin_object.c: rename pointer to label string in function
      geda_pin_object_set_attributes.

    * tests/test_box_object.c: Add checks for geda_box_object_get_position
      with NULL X-Y pointers.

2020-10-02 Wiley E. Hill <wileyhill@gmail.com>

    * src/math/m_hatch.c: Add geda_math_hatch_arc function documentation.

    * src/object/o_pin_object.c: Utilize GEDA_IS_PIN in geda_pin_object_
      set_attributes and add function documentation.

2020-09-30 Wiley E. Hill <wileyhill@gmail.com>

    * src/struct/s_place.c: Revise geda_struct_place_set_place_list to
      return a pointer to the new place list instead of void.

2020-09-28 Wiley E. Hill <wileyhill@gmail.com>

    * src/struct/s_place.c: Add function geda_struct_place_append_place_list.

2020-09-23 Wiley E. Hill <wileyhill@gmail.com>

    * src/geda/geda_line.c: Revise goofy calculation of expansion in
      geda_line_bounds.

2020-09-01 Wiley E. Hill <wileyhill@gmail.com>

    * tests/test_arc_object.c: Reorganize checks with NULL object in
      check_query, revise get_position error output message and add
      check for geda_arc_object_get_position with NULL X-Y pointers.
      Revise For loops in check_transformer and check_query to use
      intermediate fail counter and output the conditions when
      failures occur. Check geda_arc_object_get_position with only
      one X-Y pointer.

2020-08-28 Wiley E. Hill <wileyhill@gmail.com>

    * data/Makefile.am: Redirect error output from update-mime-database
      to null to suppress pesky "not in the search path" message.

    * src/object/o_get.c: Simplify geda_object_get_position return.

    * src/object/o_set.c: Revise geda_set_object_color to output an error
      message if the given color index is invalid.
